edition = "2023";

import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

option go_package = "pubsub/broker/proto/broker";

package pubsub.broker;

import "google/protobuf/empty.proto";

service Broker {
    rpc Publish(PublishRequest) returns (google.protobuf.Empty) {}
    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {}
    rpc Poll(PollRequest) returns (PollResponse) {}
    rpc MoveOffset(MoveOffsetRequest) returns (google.protobuf.Empty) {}
}

message PublishRequest {
    string topic = 1;
    repeated Message messages = 2;
}

message SubscribeRequest {
    string topic = 1;
    string group = 2;
}

message SubscribeResponse {
    string subscriber_id = 1;
}

message PollRequest {
    string subscriber_id = 1;
    int32 limit = 2;
}

message PollResponse {
    repeated Message messages = 1;
}

message MoveOffsetRequest {
    string subscriber_id = 1;
    int32 delta = 2;
}

message Message {
    string key = 1;
    bytes payload = 2;
}
